refactoring code to MVC architecture

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/fa14675228.js" crossorigin="anonymous"></script>
+    <script defer type="module" src="./js/controller.js"></script>
     <title>Document</title>
 </head>
 
@@ -51,10 +52,10 @@
                 <p>Revealing a part of the Movie poster will cost you 10 points</p>
 
 
-                <button class="btn">Got it!</button>
+                <button class="btn how-it-works-btn">Got it!</button>
             </div>
         </div>
-        <div class="popup">
+        <div class="popup hidden">
             <div class="popup-text">
                 <i class="fas fa-check-circle"></i>
                 <p>Great!!</p>
@@ -63,7 +64,9 @@
                 <button class="close btn btn-success">Nah!</button>
             </div>
         </div>
-        <script src="app.js"></script>
+
+
+
 </body>
 
 </html>
