further work on MVC design

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 <body>
     <div class="wrapper">
         <h1>The Movie Quiz!</h1>
-        <p class="current-question"><span>0</span> of <span>10</span></p>
-        <h3 class="total-points">Total points: <span>0</span></h3>
+        <div class="current-question-data">
+            <p class="current-question"><span>0</span> of <span>10</span></p>
+            <h3 class="total-points">Total points: <span>0</span></h3>
+        </div>
+
 
         <div class="img-container">
 
