Added casst,synopsis & release date btns

--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
 
 
 
+                <div class="cast-container">
+                    <button class="btn-styled show-cast-btn">Show Cast</button>
+                    <div class="cast-text hidden">
+
+                    </div>
+                </div>
+
+                <div class="synopsis-container">
+                    <button class="btn-styled show-synopsis-btn">Show Synopsis</button>
+                    <div class="synopsis-text hidden">
+
+                    </div>
+                </div>
+                <div class="date-container">
+                </div>
+                <div class="release-date-container">
+                    <button class="btn-styled show-release-date-btn">Show Release Date</button>
+
+                    <div class="date-text hidden">
+
+                    </div>
+                </div>
+                <div class="cast-container">
+                </div>
             </div>
 
         </div>
@@ -51,7 +75,7 @@
 
         <div class="button-container">
 
-            <button class="submit-btn btn-styled">Submit Answer</button>
+            <button disabled class="submit-btn btn-styled">Submit Answer</button>
             <button class="next-btn btn-styled hidden">Next Movie >></button>
 
 
