--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="https://kit.fontawesome.com/fa14675228.js" crossorigin="anonymous"></script>
     <script defer type="module" src="./js/controller.js"></script>
     <title>Document</title>
@@ -25,8 +23,7 @@
 
 
         <div class="movie-data-container">
-            <div class="points-value-container">
-                <h4>Answer Value: <span id="answer-value">100</span> points</h4>
+            <div class="left-movie-data-container">
 
             </div>
             <div class="img-container">
@@ -35,26 +32,28 @@
                 <div class="tiles-container"></div>
             </div>
             <div class="text-container">
+                <div class="points-value-container">
+                    <h4>Answer Value: <span id="answer-value">100</span> points</h4>
 
+                </div>
 
 
                 <div class="cast-container">
-                    <button class="btn-styled show-cast-btn">Show Cast</button>
+                    <button class="btn-styled show-cast-btn btn-movie-data hidden">Show Cast</button>
                     <div class="cast-text hidden">
 
                     </div>
                 </div>
 
                 <div class="synopsis-container">
-                    <button class="btn-styled show-synopsis-btn">Show Synopsis</button>
+                    <button class="btn-styled show-synopsis-btn btn-movie-data hidden">Show Synopsis</button>
                     <div class="synopsis-text hidden">
 
                     </div>
                 </div>
-                <div class="date-container">
-                </div>
+
                 <div class="release-date-container">
-                    <button class="btn-styled show-release-date-btn">Show Release Date</button>
+                    <button class="btn-styled show-release-date-btn btn-movie-data hidden">Show Release Date</button>
 
                     <div class="date-text hidden">
 
@@ -76,33 +75,46 @@
         <div class="button-container">
 
             <button disabled class="submit-btn btn-styled">Submit Answer</button>
+            <button disabled class="skip-btn btn-styled">Skip!</button>
             <button class="next-btn btn-styled hidden">Next Movie >></button>
 
 
         </div>
 
-        <div class="how-it-works-popup">
-            <div class="how-it-works-popup-text-wrapper">
-                <p>How it works:</p>
-                <p>Try to guess the movie by reading the movie synopsis. Each movie is worth 100 points.</p>
-                <p>Stuck? Click on the black question mark boxes to reveal a piece of the movie poster.</p>
-                <p>Revealing a part of the Movie poster will cost you 10 points</p>
 
-
-                <button class="btn how-it-works-btn">Got it!</button>
-            </div>
-        </div>
         <div class="popup hidden">
             <div class="popup-text">
                 <i class="fas fa-check-circle"></i>
                 <p>Great!!</p>
                 <p>You scored <span class="popup-total-points">0</span> out of <span
                         class="popup-possible-points">0</span></p>
-                <button class="btn btn-success play-again-btn">Play again</button>
-                <button class="close btn btn-success">Nah!</button>
+                <button class="btn-styled play-again-btn">Play again</button>
+                <button class="btn-change-genre btn-styled">Change Genre</button>
+                <button class="close btn-styled">Nah!</button>
             </div>
         </div>
 
+
+
+    </div>
+
+    <div class="how-it-works-popup hidden">
+        <div class="how-it-works-popup-text-wrapper">
+
+
+            <h4>HOW IT WORKS:</h4>
+            <p>Try to guess the movie by unscrambling the Movie Title. Each movie is worth 100 points.</p>
+            <p>Stuck? Click on the black question mark boxes to reveal a piece of the movie poster.</p>
+            <p>Revealing a part of the Movie poster will cost you 10 points</p>
+            <p>Alternatively, show the Movie Synopsis, cast or release date by clicking the buttons on the right of
+                the movie poster</p>
+        </div>
+
+        <form class="genre-form">
+
+
+        </form>
+    </div>
 
 
 </body>
