fixed some CSS styling issues

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="text-container">
                 <div class="points-value-container">
-                    <h4>Answer Value: <span id="answer-value">100</span> points</h4>
+                    <h4>Answer Value: <span id="answer-value">100</span></h4>
 
                 </div>
 
@@ -85,12 +85,15 @@
         <div class="popup hidden">
             <div class="popup-text">
                 <i class="fas fa-check-circle"></i>
-                <p>Great!!</p>
-                <p>You scored <span class="popup-total-points">0</span> out of <span
-                        class="popup-possible-points">0</span></p>
-                <button class="btn-styled play-again-btn">Play again</button>
-                <button class="btn-change-genre btn-styled">Change Genre</button>
-                <button class="close btn-styled">Nah!</button>
+                <h5>You scored <span class="popup-total-points">0</span> out of <span
+                        class="popup-possible-points">0</span></h5>
+                <div class="popup-btn-container">
+                    <button class="btn-styled play-again-btn">Play again</button>
+                    <button class="btn-change-genre btn-styled">Change Genre</button>
+                    <button class="close btn-styled">Nah!</button>
+
+                </div>
+
             </div>
         </div>
 
