--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./images/img/logo.jpg" />
     <!-- CSS only -->
 
     <script src="https://kit.fontawesome.com/fa14675228.js" crossorigin="anonymous"></script>
     <script defer type="module" src="./js/controller.js"></script>
-    <title>Document</title>
+    <title>The Movie Quiz</title>
 </head>
 
 <body>
